# oopszi-lab-3

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  a.cpp  func.h
src/doWhile/: doWhileFindFirstElement.cpp  doWhileFindFirstNegativeElement.cpp  doWhilePrint.cpp  doWhileSumm.cpp  doWhileSumm2.cpp  main.cpp
src/for/: forFindFirstElement.cpp  forFindFirstNegativeElement.cpp  forPrint.cpp  forSumm.cpp  forSumm2.cpp  main.cpp
src/while/: main.cpp  whileFindFirstElement.cpp  whileFindFirstNegativeElement.cpp  whilePrint.cpp  whileSumm.cpp  whileSumm2.cpp
